service.yaml
apiVersion: v1
kind: Service
metadata:
  name: production-1-service
  namespace: production-1
spec:
  selector:
    app: production-1
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
