ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: production-1-ingress
  namespace: production-1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: production-1-service
                port:
                  number: 80
